# CarLicensePlateDetection

./: CMakeLists.txt  LPRegistrar.cpp  LPRegistrar.h  main.cpp
Dataset/: 1.wmv  5.wmv
Report/FirstReport/: main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  ref.bib
